php/include/pdf_oxide.h

typedef struct EmbeddedFont EmbeddedFont;
typedef struct FfiCharList FfiCharList;
typedef struct FfiDocumentBuilder FfiDocumentBuilder;
typedef struct FfiImageList FfiImageList;
typedef struct FfiPageBuilder FfiPageBuilder;
typedef struct FfiPathList FfiPathList;
typedef struct FfiTableList FfiTableList;
typedef struct FfiTextLineList FfiTextLineList;
typedef struct FfiWordList FfiWordList;
typedef struct PdfDocument PdfDocument;
void *pdf_certificate_load_from_pem(const char *cert_pem, const char *key_pem, int32_t *error_code);
void *pdf_document_get_dss(const void *document_handle, int32_t *error_code);
void *pdf_create_renderer(int32_t _dpi,
                          int32_t _format,
                          int32_t _quality,
                          bool _anti_alias,
                          int32_t *error_code);
bool pdf_document_authenticate(PdfDocument *handle, const char *password, int32_t *error_code);
char *pdf_document_extract_all_text(PdfDocument *handle, int32_t *error_code);
FfiCharList *pdf_document_extract_chars(PdfDocument *handle,
                                        int32_t page_index,
                                        int32_t *error_code);
FfiWordList *pdf_document_extract_words(PdfDocument *handle,
                                        int32_t page_index,
                                        int32_t *error_code);
FfiTextLineList *pdf_document_extract_text_lines(PdfDocument *handle,
                                                 int32_t page_index,
                                                 int32_t *error_code);
FfiTableList *pdf_document_extract_tables(PdfDocument *handle,
                                          int32_t page_index,
                                          int32_t *error_code);
char *pdf_document_extract_text_in_rect(PdfDocument *handle,
                                        int32_t page_index,
                                        float x,
                                        float y,
                                        float w,
                                        float h,
                                        int32_t *error_code);
FfiWordList *pdf_document_extract_words_in_rect(PdfDocument *handle,
                                                int32_t page_index,
                                                float x,
                                                float y,
                                                float w,
                                                float h,
                                                int32_t *error_code);
FfiTextLineList *pdf_document_extract_lines_in_rect(PdfDocument *handle,
                                                    int32_t page_index,
                                                    float x,
                                                    float y,
                                                    float w,
                                                    float h,
                                                    int32_t *error_code);
FfiTableList *pdf_document_extract_tables_in_rect(PdfDocument *handle,
                                                  int32_t page_index,
                                                  float x,
                                                  float y,
                                                  float w,
                                                  float h,
                                                  int32_t *error_code);
FfiImageList *pdf_document_extract_images_in_rect(PdfDocument *handle,
                                                  int32_t page_index,
                                                  float x,
                                                  float y,
                                                  float w,
                                                  float h,
                                                  int32_t *error_code);
int32_t pdf_document_erase_header(PdfDocument *handle, int32_t page_index, int32_t *error_code);
int32_t pdf_document_erase_footer(PdfDocument *handle, int32_t page_index, int32_t *error_code);
int32_t pdf_document_erase_artifacts(PdfDocument *handle, int32_t page_index, int32_t *error_code);
FfiPathList *pdf_document_extract_paths(PdfDocument *handle,
                                        int32_t page_index,
                                        int32_t *error_code);
char *pdf_document_classify_page(PdfDocument *handle, int32_t page_index, int32_t *error_code);
char *pdf_document_classify_document(PdfDocument *handle, int32_t *error_code);
char *pdf_document_extract_text_auto(PdfDocument *handle, int32_t page_index, int32_t *error_code);
char *pdf_document_extract_page_auto(PdfDocument *handle,
                                     int32_t page_index,
                                     const char *options_json,
                                     int32_t *error_code);
FfiDocumentBuilder *pdf_document_builder_create(int32_t *error_code);
void pdf_document_builder_free(FfiDocumentBuilder *handle);
int32_t pdf_document_builder_set_title(FfiDocumentBuilder *handle,
                                       const char *title,
                                       int32_t *error_code);
int32_t pdf_document_builder_set_author(FfiDocumentBuilder *handle,
                                        const char *author,
                                        int32_t *error_code);
int32_t pdf_document_builder_set_subject(FfiDocumentBuilder *handle,
                                         const char *subject,
                                         int32_t *error_code);
int32_t pdf_document_builder_set_keywords(FfiDocumentBuilder *handle,
                                          const char *keywords,
                                          int32_t *error_code);
int32_t pdf_document_builder_set_creator(FfiDocumentBuilder *handle,
                                         const char *creator,
                                         int32_t *error_code);
int32_t pdf_document_builder_on_open(FfiDocumentBuilder *handle,
                                     const char *script,
                                     int32_t *error_code);
int32_t pdf_document_builder_tagged_pdf_ua1(FfiDocumentBuilder *handle, int32_t *error_code);
int32_t pdf_document_builder_language(FfiDocumentBuilder *handle,
                                      const char *lang,
                                      int32_t *error_code);
int32_t pdf_document_builder_role_map(FfiDocumentBuilder *handle,
                                      const char *custom,
                                      const char *standard,
                                      int32_t *error_code);
int32_t pdf_document_builder_register_embedded_font(FfiDocumentBuilder *handle,
                                                    const char *name,
                                                    EmbeddedFont *font,
                                                    int32_t *error_code);
FfiPageBuilder *pdf_document_builder_a4_page(FfiDocumentBuilder *handle, int32_t *error_code);
FfiPageBuilder *pdf_document_builder_letter_page(FfiDocumentBuilder *handle, int32_t *error_code);
FfiPageBuilder *pdf_document_builder_page(FfiDocumentBuilder *handle,
                                          float width,
                                          float height,
                                          int32_t *error_code);
uint8_t *pdf_document_builder_build(FfiDocumentBuilder *handle,
                                    uintptr_t *out_len,
                                    int32_t *error_code);
int32_t pdf_document_builder_save(FfiDocumentBuilder *handle,
                                  const char *path,
                                  int32_t *error_code);
int32_t pdf_document_builder_save_encrypted(FfiDocumentBuilder *handle,
                                            const char *path,
                                            const char *user_password,
                                            const char *owner_password,
                                            int32_t *error_code);
uint8_t *pdf_document_builder_to_bytes_encrypted(FfiDocumentBuilder *handle,
                                                 const char *user_password,
                                                 const char *owner_password,
                                                 uintptr_t *out_len,
                                                 int32_t *error_code);