ruby/lib/pdf_oxide/ffi/bindings.rb

      attach_function :office_document_to_markdown, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_editable_free, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_editable_open, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_editable_open_from_bytes, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_editable_replace_text, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_editable_save, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_editable_save_to_bytes, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_editable_set_cell, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_extract_text, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_oxide_detect_format, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_oxide_free_bytes, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_oxide_free_string, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_oxide_version, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_pptx_slide_add_image, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_pptx_slide_add_text, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_pptx_slide_set_title, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_pptx_writer_add_slide, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_pptx_writer_free, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_pptx_writer_new, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_pptx_writer_save, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_pptx_writer_set_presentation_size, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_pptx_writer_to_bytes, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_to_html, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_to_markdown, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_xlsx_sheet_merge_cells, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_xlsx_sheet_set_cell, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_xlsx_sheet_set_cell_styled, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_xlsx_sheet_set_column_width, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_xlsx_writer_add_sheet, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_xlsx_writer_free, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_xlsx_writer_new, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_xlsx_writer_save, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_xlsx_writer_to_bytes, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_certificate_load_from_pem, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_create_renderer, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_authenticate, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_a4_page, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_build, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_create, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_free, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_language, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_letter_page, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_on_open, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_page, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_register_embedded_font, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_role_map, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_save, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_save_encrypted, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_set_author, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_set_creator, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_set_keywords, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_set_subject, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_set_title, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_tagged_pdf_ua1, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_builder_to_bytes_encrypted, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_classify_document, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_classify_page, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_erase_artifacts, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_erase_footer, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_erase_header, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_extract_all_text, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_extract_chars, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_extract_images_in_rect, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_extract_lines_in_rect, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_extract_page_auto, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_extract_paths, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_extract_tables, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_extract_tables_in_rect, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_extract_text_auto, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_extract_text_in_rect, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_extract_text_lines, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_extract_words, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_extract_words_in_rect, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :pdf_document_get_dss, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
